# sonorem

./: CHANGES  CMakeLists.txt  INSTALL  NEWS  README.md  sonorem-defs.cmake
data/applications/: com.efanomars.sonorem.desktop
scripts/: arch_create.py  debian_create.py  install_sonorem.py  sourcepackage.py  testall.py  uninstall_sonorem.py
scripts/priv/: checktidy.py  dd_install_sonorem.py  debian_src_versions.cmake  pk_install_sonorem.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  rules  sonorem.1  sonorem.install  sonorem.manpages
share/cmake/: CommonTesting.cmake
src/: config.cc.in  config.h  debugctx.cc  debugctx.h  evalargs.cc  evalargs.h  main.cc  rfkill.cc  rfkill.h  sonodevicemanager.cc  sonodevicemanager.h  sonomodel.cc  sonomodel.h  sonosources.cc  sonosources.h  sonowindow.cc  sonowindow.h  util.cc  util.h
test/: CMakeLists.txt  fixtureGlib.cc  fixtureGlib.h  fixtureTestBase.cc  fixtureTestBase.h  fsfakerfixture.cc  fsfakerfixture.h  mainloopfixture.cc  mainloopfixture.h  testWaitingState.cxx  testutil.cc  testutil.h
